--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -914,6 +914,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -921,6 +922,8 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.3;
 allow 23.191.200.31;
 allow 23.191.200.4;
@@ -1256,6 +1259,7 @@ allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:1:108::b829:eee2;
+allow 2a06:1700:1:109::209:a94;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1604,6 +1608,7 @@ allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
+allow 37.228.129.162;
 allow 37.228.129.168;
 allow 37.228.129.189;
 allow 37.228.129.5;
