--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -807,6 +807,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -814,6 +815,8 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.3;
 allow 23.191.200.31;
 allow 23.191.200.4;
@@ -845,6 +848,7 @@ allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
+allow 37.228.129.162;
 allow 37.228.129.168;
 allow 37.228.129.189;
 allow 37.228.129.5;
