--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -425,6 +425,7 @@ deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:1:108::b829:eee2;
+deny 2a06:1700:1:109::209:a94;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
