--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -807,6 +807,7 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
+set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -814,6 +815,8 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
@@ -845,6 +848,7 @@ set_real_ip_from 37.114.63.5;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.221.208.71;
 set_real_ip_from 37.228.129.128;
+set_real_ip_from 37.228.129.162;
 set_real_ip_from 37.228.129.168;
 set_real_ip_from 37.228.129.189;
 set_real_ip_from 37.228.129.5;
