--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -927,7 +927,6 @@ deny 23.191.200.28;
 deny 23.191.200.3;
 deny 23.191.200.31;
 deny 23.191.200.4;
-deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -1231,12 +1230,12 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:115:df08::1;
 deny 2a04:52c0:116:e0e3::1;
-deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1259,7 +1258,6 @@ deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:1:108::b829:eee2;
-deny 2a06:1700:1:109::209:a94;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
@@ -1490,6 +1488,7 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
+deny 2a0f:85c1:356:16a4::1;
 deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5a46::1;
@@ -1608,7 +1607,6 @@ deny 37.114.63.5;
 deny 37.187.5.192;
 deny 37.221.208.71;
 deny 37.228.129.128;
-deny 37.228.129.162;
 deny 37.228.129.168;
 deny 37.228.129.189;
 deny 37.228.129.5;
@@ -1747,13 +1745,13 @@ deny 51.89.138.51;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.110.120;
 deny 5.255.111.64;
-deny 5.255.114.171;
 deny 5.255.115.58;
 deny 5.255.117.56;
 deny 5.255.118.151;
@@ -1792,6 +1790,7 @@ deny 65.87.7.198;
 deny 66.146.193.33;
 deny 66.220.242.222;
 deny 66.78.40.182;
+deny 66.78.40.225;
 deny 66.94.111.228;
 deny 67.219.109.141;
 deny 71.19.144.106;
