--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -718,6 +718,20 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:173;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:174;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:175;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:176;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:177;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:178;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:179;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:180;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:181;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:182;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:183;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:184;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:185;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:186;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:191;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:192;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:193;
@@ -923,11 +937,9 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
@@ -1234,7 +1246,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1750,7 +1761,6 @@ set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1800,6 +1810,7 @@ set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
+set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
 set_real_ip_from 74.208.79.7;
