--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -75,6 +75,20 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:173;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:174;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:175;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:176;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:177;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:178;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:179;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:180;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:181;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:182;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:183;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:184;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:185;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:186;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:191;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:192;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:193;
@@ -398,7 +412,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
