--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -239,6 +239,7 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 183.179.151.149;
 allow 185.100.85.132;
 allow 185.100.85.24;
 allow 185.100.87.136;
@@ -475,7 +476,6 @@ allow 185.247.184.33;
 allow 185.247.226.95;
 allow 185.252.232.218;
 allow 185.254.196.141;
-allow 185.28.47.21;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.40.4.100;
@@ -619,6 +619,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.84.71;
+allow 198.167.206.198;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -715,6 +716,10 @@ allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
+allow 2001:67c:e28:1::100;
+allow 2001:67c:e28:1::101;
+allow 2001:67c:e28:1::102;
+allow 2001:67c:e28:1::103;
 allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
@@ -937,13 +942,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
 allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -953,6 +956,7 @@ allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
+allow 2400:c620:2e:7e7c::1;
 allow 2400:d320:2202:5765::1;
 allow 2400:d320:2261:6860::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1198,7 +1202,6 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:4840:1:4::14;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1258,7 +1261,6 @@ allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1614,6 +1616,7 @@ allow 31.133.0.210;
 allow 31.133.0.235;
 allow 31.184.236.104;
 allow 31.220.75.237;
+allow 31.40.204.186;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1692,7 +1695,6 @@ allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.143.200.32;
-allow 45.144.209.18;
 allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
@@ -1800,6 +1802,10 @@ allow 62.171.137.169;
 allow 62.182.84.146;
 allow 62.72.47.105;
 allow 64.190.113.221;
+allow 64.190.76.10;
+allow 64.190.76.11;
+allow 64.190.76.12;
+allow 64.190.76.13;
 allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
@@ -1851,7 +1857,6 @@ allow 82.29.128.145;
 allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.224.201;
@@ -1899,7 +1904,6 @@ allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.237.39;
 allow 91.227.114.153;
-allow 91.242.241.228;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
