--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -934,7 +934,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -944,9 +943,8 @@ deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.28;
 deny 23.191.200.29;
-deny 23.191.200.30;
+deny 23.191.200.31;
 deny 23.191.200.4;
-deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
@@ -1261,6 +1259,7 @@ deny 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1857,6 +1856,7 @@ deny 82.29.128.145;
 deny 83.147.17.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.224.201;
