--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1833,6 +1833,7 @@ set_real_ip_from 78.153.150.25;
 set_real_ip_from 78.159.131.103;
 set_real_ip_from 79.100.12.71;
 set_real_ip_from 80.241.60.207;
+set_real_ip_from 80.253.251.56;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.82.78.14;
@@ -1849,6 +1850,7 @@ set_real_ip_from 82.153.138.7;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.71;
+set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 8.222.227.10;
 set_real_ip_from 82.29.128.145;
@@ -1911,6 +1913,7 @@ set_real_ip_from 93.113.25.239;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.109.44;
 set_real_ip_from 93.123.12.112;
+set_real_ip_from 93.94.51.243;
 set_real_ip_from 93.94.52.229;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
